{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 1114,
  "lineage": "fb2b95fb-bb1a-3f0e-06f4-0271a6a010a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c5fce0e4754349",
            "domain": "vpc",
            "id": "eipalloc-0b8c5fce0e4754349",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-118-122.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.118.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NAT Gateway - 1"
            },
            "tags_all": {
              "Name": "EIP NAT Gateway - 1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a246d678da45b45",
            "domain": "vpc",
            "id": "eipalloc-00a246d678da45b45",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-189-200-96.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.200.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NAT Gateway - 2"
            },
            "tags_all": {
              "Name": "EIP NAT Gateway - 2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc5d5ae3a65b209c",
            "domain": "vpc",
            "id": "eipalloc-0cc5d5ae3a65b209c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-239-67.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.239.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NAT Gateway - 3"
            },
            "tags_all": {
              "Name": "EIP NAT Gateway - 3"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "maq-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0bf77989b54f80b2d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-0bf77989b54f80b2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f32ae17759b8fda9",
            "private_dns": "ip-10-0-11-147.us-east-2.compute.internal",
            "private_ip": "10.0.11.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0449955c61e026943",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dbb343fde7c5d07",
            "tags": {
              "Name": "maq-priv-joao-1"
            },
            "tags_all": {
              "Name": "maq-priv-joao-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0b7371c9a188bd5b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-0b7371c9a188bd5b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012d7f1f2d542eadd",
            "private_dns": "ip-10-0-12-197.us-east-2.compute.internal",
            "private_ip": "10.0.12.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf95cb74689cb811",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a54fc3d3779a6973",
            "tags": {
              "Name": "maq-priv-joao-2"
            },
            "tags_all": {
              "Name": "maq-priv-joao-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0a34ba1d1c29f0697",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-0a34ba1d1c29f0697",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0420002b61853de45",
            "private_dns": "ip-10-0-13-142.us-east-2.compute.internal",
            "private_ip": "10.0.13.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032f3fbf4a86d4378",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053549779774501bc",
            "tags": {
              "Name": "maq-priv-joao-3"
            },
            "tags_all": {
              "Name": "maq-priv-joao-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "maq-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0e129e4742df63c6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-0e129e4742df63c6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057b49aeb6b3c9f45",
            "private_dns": "ip-10-0-1-247.us-east-2.compute.internal",
            "private_ip": "10.0.1.247",
            "public_ip": "3.144.14.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c51fe22d8d5db93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06193b85c767b7ad1",
            "tags": {
              "Name": "maq-pub-joao-1"
            },
            "tags_all": {
              "Name": "maq-pub-joao-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-09da48397f0177f60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-09da48397f0177f60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e9ec5a81cca69d0",
            "private_dns": "ip-10-0-2-41.us-east-2.compute.internal",
            "private_ip": "10.0.2.41",
            "public_ip": "3.135.239.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fba2f0ea23755ff5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c908b55dc87ee6b2",
            "tags": {
              "Name": "maq-pub-joao-2"
            },
            "tags_all": {
              "Name": "maq-pub-joao-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-021aa0d1a5b65f970",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao",
            "id": "i-021aa0d1a5b65f970",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02adac36114891d3b",
            "private_dns": "ip-10-0-3-223.us-east-2.compute.internal",
            "private_ip": "10.0.3.223",
            "public_ip": "18.191.216.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f60eceb15d54a1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0193beced7f83da81",
            "tags": {
              "Name": "maq-pub-joao-3"
            },
            "tags_all": {
              "Name": "maq-pub-joao-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0933b198a9444a64d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.role-joao",
            "aws_iam_role.role-joao",
            "aws_security_group.scg-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:internet-gateway/igw-0d739934b548e4361",
            "id": "igw-0d739934b548e4361",
            "owner_id": "492737417918",
            "tags": {
              "Name": "igw-joao"
            },
            "tags_all": {
              "Name": "igw-joao"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8c5fce0e4754349",
            "connectivity_type": "public",
            "id": "nat-0b5ff7b392c279a0e",
            "network_interface_id": "eni-011ea07692c737540",
            "private_ip": "10.0.1.41",
            "public_ip": "3.141.118.122",
            "subnet_id": "subnet-06193b85c767b7ad1",
            "tags": {
              "Name": "ngw-joao-1"
            },
            "tags_all": {
              "Name": "ngw-joao-1"
            }
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a246d678da45b45",
            "connectivity_type": "public",
            "id": "nat-08492e119e111f0fb",
            "network_interface_id": "eni-09bcb9a89cd010f6a",
            "private_ip": "10.0.2.135",
            "public_ip": "18.189.200.96",
            "subnet_id": "subnet-0c908b55dc87ee6b2",
            "tags": {
              "Name": "ngw-joao-2"
            },
            "tags_all": {
              "Name": "ngw-joao-2"
            }
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc5d5ae3a65b209c",
            "connectivity_type": "public",
            "id": "nat-03186d5a6573afec7",
            "network_interface_id": "eni-064a6654dd4364b9a",
            "private_ip": "10.0.3.238",
            "public_ip": "3.132.239.67",
            "subnet_id": "subnet-0193beced7f83da81",
            "tags": {
              "Name": "ngw-joao-3"
            },
            "tags_all": {
              "Name": "ngw-joao-3"
            }
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-0c58fe9b316ea169f",
            "id": "rtb-0c58fe9b316ea169f",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b5ff7b392c279a0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-priv-joao-1"
            },
            "tags_all": {
              "Name": "rt-priv-joao-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-03990a107c78a1218",
            "id": "rtb-03990a107c78a1218",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08492e119e111f0fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-priv-joao-2"
            },
            "tags_all": {
              "Name": "rt-priv-joao-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-038f8d2249630bcf4",
            "id": "rtb-038f8d2249630bcf4",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03186d5a6573afec7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-priv-joao-3"
            },
            "tags_all": {
              "Name": "rt-priv-joao-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-0e5203b6f52720e19",
            "id": "rtb-0e5203b6f52720e19",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d739934b548e4361",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub-joao"
            },
            "tags_all": {
              "Name": "rt-pub-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013222626c9ba408c",
            "route_table_id": "rtb-0c58fe9b316ea169f",
            "subnet_id": "subnet-07dbb343fde7c5d07"
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_route_table.rt-priv-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d8280d4f72ec0c3",
            "route_table_id": "rtb-03990a107c78a1218",
            "subnet_id": "subnet-0a54fc3d3779a6973"
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_route_table.rt-priv-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a39a3222b01fdaf",
            "route_table_id": "rtb-038f8d2249630bcf4",
            "subnet_id": "subnet-053549779774501bc"
          },
          "dependencies": [
            "aws_eip.eip-ngw-joao",
            "aws_internet_gateway.igw-joao",
            "aws_nat_gateway.ngw-joao",
            "aws_route_table.rt-priv-joao",
            "aws_subnet.subnet-priv-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7d5d2e8f64f2503",
            "route_table_id": "rtb-0e5203b6f52720e19",
            "subnet_id": "subnet-06193b85c767b7ad1"
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_route_table.rt-pub-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b5c3d1e99e98b8",
            "route_table_id": "rtb-0e5203b6f52720e19",
            "subnet_id": "subnet-0c908b55dc87ee6b2"
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_route_table.rt-pub-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0287acc4c7d0e4ed5",
            "route_table_id": "rtb-0e5203b6f52720e19",
            "subnet_id": "subnet-0193beced7f83da81"
          },
          "dependencies": [
            "aws_internet_gateway.igw-joao",
            "aws_route_table.rt-pub-joao",
            "aws_subnet.subnet-pub-joao",
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scg-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:security-group/sg-0933b198a9444a64d",
            "description": "security group de joao",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0933b198a9444a64d",
            "ingress": [],
            "name": "scg-joao",
            "name_prefix": "",
            "owner_id": "492737417918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scg-joao"
            },
            "tags_all": {
              "Name": "scg-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-07dbb343fde7c5d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-07dbb343fde7c5d07",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-joao-1"
            },
            "tags_all": {
              "Name": "subnet-priv-joao-1"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0a54fc3d3779a6973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0a54fc3d3779a6973",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-joao-2"
            },
            "tags_all": {
              "Name": "subnet-priv-joao-2"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-053549779774501bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-053549779774501bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-joao-3"
            },
            "tags_all": {
              "Name": "subnet-priv-joao-3"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-06193b85c767b7ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06193b85c767b7ad1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-joao-1"
            },
            "tags_all": {
              "Name": "subnet-pub-joao-1"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0c908b55dc87ee6b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c908b55dc87ee6b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-joao-2"
            },
            "tags_all": {
              "Name": "subnet-pub-joao-2"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0193beced7f83da81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0193beced7f83da81",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-joao-3"
            },
            "tags_all": {
              "Name": "subnet-pub-joao-3"
            },
            "vpc_id": "vpc-084ae64570c166c71"
          },
          "dependencies": [
            "aws_vpc.vpc-joao",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:vpc/vpc-084ae64570c166c71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01863edc01348b896",
            "default_route_table_id": "rtb-0d5b8c23ab55aee47",
            "default_security_group_id": "sg-07290ad562768dc1f",
            "dhcp_options_id": "dopt-22fa9a4b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-084ae64570c166c71",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5b8c23ab55aee47",
            "owner_id": "492737417918",
            "tags": {
              "Name": "vpc-joao"
            },
            "tags_all": {
              "Name": "vpc-joao"
            }
          }
        }
      ]
    }
  ]
}